potential fix for no topbar on mobile

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,9 @@
 @import "mixins";
 
 .main {
-    height: 100vh;
+    position: absolute;
+    top: 120px;
+    height: calc(100vh - 120px);
     width: 100%;
     display: flex;
     flex-direction: column;
