--- a/styles/Topbar.module.scss
+++ b/styles/Topbar.module.scss
@@ -1,6 +1,9 @@
 @import "mixins";
 
-.logoContainer {
+.container {
+    position: fixed;
+    top: 60px;
+    z-index: 10;
     display: flex;
     flex-direction: row;
     justify-content: center;
